<resources>
    <string name="app_name">Stessy one page app</string>
    <string name="e_mail_id">E-Mail Id</string>
    <string name="gss_gmail_com">gss-us.com</string>
    <string name="phone_no">9962020304</string>
    <string name="global_soft_and_solutions">Global Soft and Solutions</string>
    <string name="our_company_focussing_on_recruiting_freshers_n_with_talent_and_focus">Our company focussing on Recruiting Freshers \n with talent and focus</string>
    <string name="contact_us_n_suggestions">contact us </string>
</resources>
