<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.ctadmin.stessyonepageapp.MainActivity"
    android:weightSum="1">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/global_soft_and_solutions"
        android:textColor="#4689C8"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_weight="0.79" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:src="@drawable/i" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/our_company_focussing_on_recruiting_freshers_n_with_talent_and_focus"
        android:textSize="25sp"
        android:textStyle="italic" />
    <TextView
        android:text="@string/contact_us_n_suggestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/gss_gmail_com"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:autoLink="phone"
            android:gravity="center"
            android:text="@string/phone_no"
            android:textColor="#4689C8"
            android:textSize="25sp"
            android:textStyle="bold" />



    </LinearLayout>


</LinearLayout>

